# Orchid

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Untitled  deny.toml  rust-toolchain.toml  rustfmt.toml
crates/orchid-app/: Cargo.toml  README.md  build.rs
crates/orchid-app/src/: main.rs
crates/orchid-core/: Cargo.toml  README.md
crates/orchid-core/src/: error.rs  lib.rs
crates/orchid-core/src/action/: context.rs  dispatcher.rs  history.rs  mod.rs  reversible.rs
crates/orchid-core/src/command/: descriptor.rs  mod.rs  palette.rs  parser.rs  registry.rs  shortcut.rs
crates/orchid-core/src/event/: bus.rs  channel.rs  event.rs  mod.rs  priority.rs  subscription.rs
crates/orchid-core/src/input/: event.rs  gesture.rs  mapper.rs  mod.rs  zone.rs
crates/orchid-core/src/job/: mod.rs
crates/orchid-core/tests/: bus_concurrency.rs  end_to_end.rs  shortcut_overrides.rs
crates/orchid-crypto/: Cargo.toml  README.md
crates/orchid-crypto/src/: error.rs  lib.rs  random.rs
crates/orchid-crypto/src/age_encryption/: decryptor.rs  encryptor.rs  identity.rs  metadata.rs  mod.rs  reveal.rs
crates/orchid-crypto/src/biometric/: mod.rs
crates/orchid-crypto/src/content/: chunker.rs  deduplicator.rs  hash.rs  mod.rs  store.rs
crates/orchid-crypto/src/kdbx/: clipboard.rs  database.rs  entry.rs  group.rs  mod.rs  search.rs  totp.rs
crates/orchid-crypto/src/secret/: dpapi.rs  mod.rs  stored.rs  zeroizing.rs
crates/orchid-crypto/src/vault/: fm_passphrase.rs  mod.rs
crates/orchid-crypto/tests/: age_directory.rs  age_roundtrip.rs  dedup_sharing.rs  gc_orphans.rs  kdbx_roundtrip.rs  reveal_session.rs
crates/orchid-fs/: Cargo.toml  README.md
crates/orchid-fs/src/: entry.rs  error.rs  icon.rs  lib.rs  mime.rs  path.rs
crates/orchid-fs/src/archive/: mod.rs  reader.rs  sevenz.rs  tar.rs  types.rs  zip.rs
crates/orchid-fs/src/encrypted/: engine.rs  index.rs  marker.rs  mod.rs
crates/orchid-fs/src/managed/: config.rs  engine.rs  index.rs  mod.rs  policy.rs
crates/orchid-fs/src/operations/: copy.rs  delete.rs  mod.rs  move_.rs  progress.rs
crates/orchid-fs/src/provider/: local.rs  mod.rs  rclone.rs  registry.rs
crates/orchid-fs/src/tag/: manager.rs  mod.rs
crates/orchid-fs/src/watcher/: events.rs  fs_watcher.rs  mod.rs
crates/orchid-fs/tests/: end_to_end.rs  managed.rs
crates/orchid-i18n/: Cargo.toml  README.md
crates/orchid-i18n/locales/ar-SA/: main.ftl
crates/orchid-i18n/locales/de-DE/: main.ftl
crates/orchid-i18n/locales/en-US/: main.ftl
crates/orchid-i18n/locales/es-ES/: main.ftl
crates/orchid-i18n/locales/fr-FR/: main.ftl
crates/orchid-i18n/locales/it-IT/: main.ftl
crates/orchid-i18n/locales/ja-JP/: main.ftl
crates/orchid-i18n/locales/ko-KR/: main.ftl
crates/orchid-i18n/locales/pt-BR/: main.ftl
crates/orchid-i18n/locales/ru-RU/: main.ftl
crates/orchid-i18n/locales/zh-CN/: main.ftl
crates/orchid-i18n/src/: lib.rs
crates/orchid-search/: Cargo.toml  README.md
crates/orchid-search/src/: engine.rs  error.rs  lib.rs  schema.rs
crates/orchid-search/src/extractors/: mod.rs  pdf.rs  text.rs
crates/orchid-search/src/indexer/: crawl.rs  extract.rs  mod.rs  scheduler.rs  watcher.rs
crates/orchid-search/src/query/: builder.rs  mod.rs  snippet.rs
crates/orchid-search/tests/: basic_search.rs  incremental.rs
crates/orchid-storage/: Cargo.toml  README.md
crates/orchid-storage/src/: error.rs  lib.rs  paths.rs
crates/orchid-storage/src/config/: loader.rs  locale_format.rs  mod.rs  schema.rs  watcher.rs
crates/orchid-storage/src/state/: codec.rs  database.rs  migrations.rs  mod.rs  tables.rs  types.rs
crates/orchid-storage/tests/: integration.rs
crates/orchid-terminal/: Cargo.toml  README.md
crates/orchid-terminal/src/: error.rs  events.rs  lib.rs  metrics.rs  search.rs
crates/orchid-terminal/src/backend/: mod.rs  shell.rs  ssh.rs  wsl.rs
crates/orchid-terminal/src/emulator/: color.rs  cursor.rs  grid.rs  mod.rs  selection.rs
crates/orchid-terminal/src/input/: keymap.rs  mod.rs  paste.rs
crates/orchid-terminal/src/layout/: focus.rs  mod.rs  splits.rs  tabs.rs
crates/orchid-terminal/src/pty/: io.rs  mod.rs  resize.rs  spawn.rs
crates/orchid-terminal/src/session/: lifecycle.rs  manager.rs  mod.rs  persistence.rs
crates/orchid-terminal/tests/: bus_events.rs  pty_echo.rs  pty_resize.rs
crates/orchid-ui/: Cargo.toml  README.md  build.rs
crates/orchid-ui/src/: app.rs  autostart.rs  commands.rs  error.rs  lib.rs  slint_generated.rs  system_theme.rs  terminal_font_metrics.rs  terminal_raster.rs
crates/orchid-ui/src/theme/: bundled.rs  loader.rs  mod.rs  tokens.rs
crates/orchid-ui/src/widgets/: mod.rs  view.rs
crates/orchid-ui/src/window/: errors.rs  main_window.rs  mod.rs  spawn.rs  startup.rs
crates/orchid-ui/tests/: bootstrap_smoke.rs  file_manager_navigate.rs  gesture_bindings.rs  viewer_floating_open.rs  viewer_open.rs  widget_catalog_smoke.rs  workspace_bootstrap.rs
crates/orchid-ui/ui/: app_state_global.slint  command-palette.slint  command_palette_global.slint  main.slint  navigation_global.slint  notification-center.slint  notification_global.slint  onboarding-overlay.slint  onboarding_global.slint  settings-panel.slint  settings_global.slint  strings_global.slint  theme_global.slint  widget_catalog_global.slint  workspace-panel.slint
crates/orchid-ui/ui/widgets/: calculator.slint  calendar.slint  clock.slint  jyotish.slint  media.slint  moon.slint  notes.slint  password-add-dialog.slint  password.slint  processes-confirm-dialog.slint  processes.slint  recent_files.slint  (+4 more)
crates/orchid-viewers/: Cargo.toml  README.md
crates/orchid-viewers/src/: dispatch.rs  error.rs  lib.rs  snapshot.rs  viewer_trait.rs
crates/orchid-viewers/tests/: smoke.rs
crates/orchid-widgets/: Cargo.toml  README.md
crates/orchid-widgets/src/: commands.rs  error.rs  events.rs  lib.rs  recent_files.rs  registry.rs  visibility.rs
crates/orchid-widgets/tests/: builtin_configs.rs  file_manager_star.rs  group_dissolve.rs  manager_lifecycle.rs  persistence.rs  search_debouncer.rs  visibility_lifecycle.rs  workspace_switch.rs
(+230 files in other folders)
