[package]
name = "orchid-core"
description = "Core types, event bus primitives, and command-registry abstractions shared across the Orchid workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
