[package]
name = "orchid-fs"
description = "Filesystem layer for Orchid: providers, watching, tags, managed folders, encrypted paths, archives, and file operations."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
walkdir.workspace = true
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
mime_guess.workspace = true
infer.workspace = true
zip.workspace = true
sevenz-rust.workspace = true
tar.workspace = true
flate2.workspace = true
xz2.workspace = true
dashmap.workspace = true
redb.workspace = true
filetime.workspace = true
trash.workspace = true

orchid-core.workspace = true
orchid-storage.workspace = true
orchid-crypto.workspace = true
serde_json.workspace = true

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
tracing-subscriber.workspace = true
