[package]
name = "orchid-search"
description = "Full-text search for Orchid backed by Tantivy, with content extractors for text and PDF."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tantivy.workspace = true
tokio = { workspace = true }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
encoding_rs.workspace = true
chardetng.workspace = true
pdfium-render.workspace = true

orchid-core.workspace = true
orchid-storage.workspace = true
orchid-fs.workspace = true

[dev-dependencies]
tokio = { workspace = true }
tempfile.workspace = true
tracing-subscriber.workspace = true
