[package]
name = "orchid-storage"
description = "Persistent state and configuration for Orchid: redb-backed state store and hot-reloadable TOML config."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
redb.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
notify.workspace = true
notify-debouncer-full.workspace = true
directories.workspace = true
parking_lot.workspace = true
bincode.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
tracing-subscriber.workspace = true
