[package]
name = "orchid-ui"
description = "Slint-based UI layer for Orchid (Skia renderer), including the terminal widget helpers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
slint.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
secrecy.workspace = true
tokio = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
arboard.workspace = true
uuid.workspace = true
serde.workspace = true
bincode.workspace = true
chrono.workspace = true

orchid-core.workspace = true
orchid-crypto.workspace = true
orchid-i18n.workspace = true
orchid-storage.workspace = true
orchid-terminal.workspace = true
orchid-viewers.workspace = true
orchid-widgets.workspace = true
fontdb = "0.23"
fontdue = "0.9.3"

[build-dependencies]
slint-build.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
