[package]
name = "orchid-widgets"
description = "Widget framework for Orchid: registry, instances, lifecycle, layouts, workspaces, and groups."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
smallvec.workspace = true
bitflags.workspace = true
redb.workspace = true

orchid-core.workspace = true
orchid-storage.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
