[package]
name = "orchid-widgets"
description = "Widget framework for Orchid: registry, instances, lifecycle, layouts, workspaces, and groups."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
iana-time-zone.workspace = true
uuid.workspace = true
dashmap.workspace = true
smallvec.workspace = true
bitflags.workspace = true
redb.workspace = true
reqwest.workspace = true
feed-rs.workspace = true
futures.workspace = true
opener.workspace = true
sysinfo.workspace = true
starship-battery.workspace = true
url.workspace = true
secrecy.workspace = true

orchid-core.workspace = true
orchid-i18n.workspace = true
orchid-storage.workspace = true
orchid-crypto.workspace = true
orchid-search.workspace = true
orchid-fs.workspace = true
orchid-viewers.workspace = true

[target.'cfg(windows)'.dependencies]
windows-future.workspace = true

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Foundation",
    "Media_Control",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true }
